--- a/src/app/banner/banner/banner.component.html
+++ b/src/app/banner/banner/banner.component.html
@@ -6,7 +6,7 @@
         width="800"
         height="864"
         loading="lazy"
-        alt="Ethan's Photo"
+        alt="no-img available"
         class="img-cover"
       />
 
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="hero-content">
+    <div class="section-text">
       <h2 class="hero-title">
         <span>Hello I'm</span>
         <h1 style="color: hsl(7, 96%, 61%);">Rohit Roy</h1>
@@ -27,6 +27,8 @@
       </h2>
 
       <div class="btn-group">
+
+          <a href="../../assets/Rohit.pdf" target="_blank" class="btn btn-primary blue">Download CV</a>
         <a href="#contact" class="btn btn-primary blue">Contact Me</a>
       </div>
     </div>
