--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-        <h1 class="pic" >Rohit</h1>
+        <h1 class="logo" >Rohit</h1>
         <!-- <ul class="links-container">
 
           <li class="links-items">
@@ -26,7 +26,7 @@
           </li>
 
         </ul> -->
-        <ul class="links-container">
+        <!-- <ul class="links-container">
           <li class="links-items">  <a href="#home" class="link active" >Home</a></li>
           <li class="links-items"><a href="#about" class="link">About</a></li>
           <li class="links-items"> <a href="#portfolio" class="link">Project</a></li>
@@ -36,7 +36,17 @@
             <a href="../../assets/Rohit.pdf" target="_blank" class="btn btn-primary link">Download CV</a>
           </li>
       </ul>
-    </div>
+    </div> -->
+
+      <ul class="links-container">
+          <li class="links-items"><a href='#' class="link">home</a></li>
+          <li class="links-items"><a href='#about' class="link">about</a></li>
+          <li class="links-items"><a href='#portfolio' class="link">project</a></li>
+          <li class="links-items">   <a href="#skills"class="link" >Skills</a></li>
+          <li class="links-items"><a href='#contact' class="link">contact</a></li>
+
+          </ul>
+  </div>
 
   <!-- <header class="header" data-header>
     <div class="container">
