--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -1,13 +1,13 @@
 <section class="section about" id="about">
   <div class="container">
+    <div class="contact-card">
     <div class="row">
-      <figure class="about-banner">
+      <figure class="about-banner text-center">
         <img
           src="../../../assets/images/header-img.svg"
-          width="800"
-          height="652"
-          loading="lazy"
-          alt="Ethan's Photo"
+
+
+          alt="no-image"
           class="img-cover"
         />
       </figure>
@@ -15,24 +15,22 @@
       <div class="col-md-8"></div>
     </div>
 
-    <div class="about-content">
+    <div class="card-content">
       <p class="section-subtitle">I'm a 3rd Year B.tech Student</p>
 
 
-      <p class="section-text">
+
         Welcome to my portfolio website! My name is Rohit Roy and I am a third-year student pursuing a Bachelor's degree in Computer Science and
         Engineering (CSE) from VIT, Bhopal. I am passionate about the field of computer science and am eager to learn more about the latest
         developments in technology and how it can be used to solve problems and
-        improve people's lives.
-      </p>
-
-      <p class="section-text">
         I am open to any kind of opportunities in the field of computer science
         and open to learning and growing. Thank you for visiting my portfolio
         website!
-      </p>
 
-      <a href="#portfolio" class="btn btn-primary blue">View Projects</a>
+
+     <a href="#portfolio"><button  class="btn btn-danger">View Projects</button></a>
+
     </div>
   </div>
+</div>
 </section>
