--- a/src/app/banner/banner/banner.component.html
+++ b/src/app/banner/banner/banner.component.html
@@ -7,7 +7,7 @@
         height="864"
         loading="lazy"
         alt="no-img available"
-        class="img-cover"
+        class="img-cover1"
       />
 
       <div class="elem elem-1">
@@ -23,14 +23,12 @@
         <h1 style="color: hsl(7, 96%, 61%);">Rohit Roy</h1>
         <p class="h2 section-title"></p>
         Full Stack Developer
-
       </h2>
-
-      <div class="btn-group">
-
-          <a href="../../assets/Rohit.pdf" target="_blank" class="btn btn-primary blue">Download CV</a>
-        <a href="#contact" class="btn btn-primary blue">Contact Me</a>
-      </div>
     </div>
+<div class="container text-center">
+    <a href="../../assets/Rohit.pdf"> <button  class="btn btn-primary btn-sm">Download CV</button></a>
+        <a href="#contact"> <button class="btn btn-danger mt20">Contact</button></a>
+      </div>
+
   </div>
 </section>
