--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,10 @@
 <section class="section contact" id="contact">
   <div class="container">
-
+    <p class="section-subtitle">Contact Me</p>
+    <h2 class="h2 text-center">Drop Me a Mail</h2>
     <div class="contact-card">
 
-      <h2 class="h2 section-title">Drop Me a Message</h2>
+
 
       <div class="container text-center">
 
@@ -21,7 +22,6 @@
       </div>
 
     </div>
-
+<br>
   </div>
 </section>
-<br>
