--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,26 @@
-<div class="navbar">
+<!-- <section class="sec">
+<mat-toolbar>
+
+ <span>Rohit Roy</span>
+ <span class="example-spacer"></span>
+ <div class="example-button-row">
+<div class="row">
+
+  <a href="#home"><button mat-raised-button class="ml5" color="primary">Home</button></a>
+ <a href="#about"> <button mat-raised-button class="ml5" color="primary">About</button></a>
+ <a href="#portfolio"> <button mat-raised-button class="ml5" color="accent">Projects</button></a>
+ <a href="#skills"><button mat-raised-button class="ml5" color="accent">Skills</button></a>
+ <a href="#contact"> <button mat-raised-button class="ml5" color="warn">Contact</button></a>
+
+</div>
+</div>
+
+</mat-toolbar>
+</section> -->
+
+<!-- <div class="navbar">
         <h1 class="logo" >Rohit</h1>
-        <!-- <ul class="links-container">
+     <ul class="links-container">
 
           <li class="links-items">
             <a href="#home" class="link active" >Home</a>
@@ -36,7 +56,7 @@
             <a href="../../assets/Rohit.pdf" target="_blank" class="btn btn-primary link">Download CV</a>
           </li>
       </ul>
-    </div> -->
+    </div>
 
       <ul class="links-container">
           <li class="links-items"><a href='#' class="link">home</a></li>
@@ -46,9 +66,9 @@
           <li class="links-items"><a href='#contact' class="link">contact</a></li>
 
           </ul>
-  </div>
+  </div> -->
 
-  <!-- <header class="header" data-header>
+ <!--  <header class="header" data-header>
     <div class="container">
 
       <a href="#">
@@ -84,6 +104,41 @@
       </nav>
 
     </div>
-  </header>
 
- -->
+  </header> -->
+  <div class="container">
+    class="navbar navbar-light" style="background-color: #e3f2fd;
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" >
+     <a class="navbar-brand" href="#"  >
+          Rohit
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto"></ul>
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                  <a class="nav-link"  href="#">Home</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link"  href="#about">About</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link"  href="#skills">Skills</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link"  href="#portfolio">Project</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link"  href="#contact">Contact</a>
+              </li>
+
+          </ul>
+
+      </div>
+
+</nav>
+
+</div>
