--- a/src/app/banner/banner/banner.component.html
+++ b/src/app/banner/banner/banner.component.html
@@ -13,7 +13,7 @@
       <div class="elem elem-1">
         <p class="elem-title">3rd</p>
 
-        <p class="elem-text">sbkdabsj</p>
+        <p class="elem-text">Year Btech Student</p>
       </div>
     </div>
 
