--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -18,6 +18,7 @@
     <div class="card-content">
       <p class="section-subtitle">I'm a 3rd Year B.tech Student</p>
 
+      <div class="card-title">
 
 
         Welcome to my portfolio website! My name is Rohit Roy and I am a third-year student pursuing a Bachelor's degree in Computer Science and
@@ -26,10 +27,10 @@
         I am open to any kind of opportunities in the field of computer science
         and open to learning and growing. Thank you for visiting my portfolio
         website!
-
-
-     <a href="#portfolio"><button  class="btn btn-danger">View Projects</button></a>
-
+</div>
+      <div class="text-center">
+     <a href="#portfolio"><button  class="btn btn-danger ">View Projects</button></a>
+    </div>
     </div>
   </div>
 </div>
