--- a/src/app/banner/banner/banner.component.html
+++ b/src/app/banner/banner/banner.component.html
@@ -13,7 +13,7 @@
       <div class="elem elem-1">
         <p class="elem-title">3rd</p>
 
-        <p class="elem-text">Year Btech Student</p>
+        <p class="elem-text">Year B.tech CSE</p>
       </div>
     </div>
 
@@ -25,9 +25,9 @@
         Full Stack Developer
       </h2>
     </div>
-<div class="container text-center">
-    <a href="../../assets/Rohit.pdf"> <button  class="btn btn-primary btn-sm">Download CV</button></a>
-        <a href="#contact"> <button class="btn btn-danger mt20">Contact</button></a>
+<div class="text-center">
+    <a href="../../assets/Rohit.pdf"> <button  class="btn btn-primary ">Download CV</button></a>
+        <a href="#contact"> <button class="btn btn-danger ">Contact</button></a>
       </div>
 
   </div>
