--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -126,7 +126,7 @@
                   <a class="nav-link"  href="#about">About</a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link"  href="#skills">Skills</a>
+                  <a class="nav-link"  href="#skills">Skill</a>
               </li>
               <li class="nav-item active">
                   <a class="nav-link"  href="#portfolio">Project</a>
