--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,13 +11,15 @@
           {{q.title}}
         </div>
         <div class="card-title">
+          <span style="color: hsl(7, 96%, 61%);">
           {{q.technologies}}
+</span>
         </div>
 
       <div class="card-title">
         {{q.description}}
       </div>
-
+      <a href={{q.link}} target="_blank"><button  class="btn btn-danger">{{q.button}}</button></a>
       </div>
     </div>
       </div>
