--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,7 @@
-<section class="section skills" id="skills">
+<h2 class="h2 text-center ">Skills</h2>
+<section class="section skills mb-5" id="skills">
+
   <div class="container">
-    <p class="section-subtitle">My Skills</p>
 
 
 
