--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,3 @@
-#pro{
-  background-color: rgb(0, 0, 0);
-}
 body{margin-top:20px;}
 /* About Me
 ---------------------*/
@@ -139,15 +136,13 @@ body{margin-top:20px;}
     font-size: 16px;
     font-weight: 500;
 }
-.theme-color {
-  color: #fe4f6c;
-  font-weight: 500px;
-
-  font-size: large;
-}
 
 .px-btn.theme-t {
     background: transparent;
     border: 2px solid #fe4f6c;
     color: #fe4f6c;
 }
+
+.intro-social li {
+    font-size: 24px; /* Adjust the font size as needed */
+  }
