--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<div class="container-fluid">
 
 <app-navbar></app-navbar>
-<app-banner></app-banner>
-<br>
-<app-about></app-about>
-<br>
-<app-projects></app-projects>
-<app-skills></app-skills>
-<app-contact></app-contact>
+<app-jumbo></app-jumbo>
 
-</div>
+<app-about></app-about>
+
+<app-projects></app-projects>
+<app-experience></app-experience>
+<app-education></app-education>
+
+<app-skills></app-skills>
+
+<app-contact></app-contact>
